# coder

./: README.md  TODOS.txt  config.py  docker-compose.yaml  main.py  pyproject.toml
core/agents/: planner.py  planner_graph.py
core/agents/nodes/: context.py  llm_call.py  prepare_planner_context.py  summarizer.py  tool.py  util.py
core/client/lsp/: client.py  manager.py
core/common/: model.py  tracing.py
core/common/middlewares/: planner_summarization.py  tool_result_compression.py
core/model/: planner.py  search.py  state.py
core/service/: tree_sitter.py
core/tools/: files.py  lsp_installer.py  registry.py  search.py  tools.py
examples/: planner_graph_usage.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/tools/: test_components.py
tests/support/: helpers.py  language_cases.py
tests/unit/: test_config.py  test_tree_sitter.py
tests/unit/agents/: test_context_history.py  test_planner_graph.py  test_summarizer.py
tests/unit/client/: test_lsp_client.py  test_lsp_manager.py
tests/unit/extractors/: test_extractors.py  test_find_references_extractor.py
tests/unit/tools/: test_find_references.py  test_tools.py
