[project]
name = "coder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=2.9.0",
    "google-generativeai>=0.8.6",
    "langfuse>=3.0.0",
    "langchain>=1.3.9",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.2",
    "pydantic>=2.13.4",
    "langgraph>=1.2.5",
]
